--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -753,7 +753,8 @@ a {
 }
 
 /* Tabs */
-.tabs {
+.tabs,
+.assign-course-tabs {
 	display: flex;
 	border-bottom: 1px solid var(--border-color);
 	margin-bottom: 20px;
