--- a/secretary/css/program.css
+++ b/secretary/css/program.css
@@ -471,6 +471,11 @@ body {
 	color: var(--primary-color);
 }
 
+.filter-btn.danger {
+	background-color: var(--danger-color);
+	color: white;
+}
+
 .filter-btn:hover {
 	transform: translateY(-2px);
 }
